# baestatement

./: README.md  pyproject.toml  requirements.txt
baestatement/: __init__.py  parse.py  pdf.py  stats.py
baestatement/cli/: analyze.py  csv.py  dump.py  interactive.py  json.py  parse.py  plot.py  plot_period.py  rename.py  show.py  util.py
baestatement/format/: __init__.py  cli.py  csv.py  dump.py  json.py  util.py
