[build-system]
requires            = ["setuptools>=61.0"]
build-backend       = "setuptools.build_meta"

[project]
name                = "baestatement"
dynamic             = ["readme", "version", "dependencies"]
authors             = [{ name = "Ferdinand Bachmann", email = "ferdinand.bachmann@yrlf.at" }]
description         = "a parser for BankAustria e-Statement PDF files"
requires-python     = ">=3.12"
classifiers         = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
"bae-dump"          = "baestatement.cli.dump:main"
"bae-show"          = "baestatement.cli.show:main"
"bae-csv"           = "baestatement.cli.csv:main"
"bae-plot"          = "baestatement.cli.plot:main"
"bae-rename"        = "baestatement.cli.rename:main"

[project.urls]
"Homepage"          = "https://github.com/Ferdi265/baestatement"
"Bug Tracker"       = "https://github.com/Ferdi265/baestatement/issues"

[tool.setuptools.dynamic]
version             = { attr = "baestatement.version.__version__" }
readme              = { file = ["README.md"], content-type = "text/markdown" }
dependencies        = { file = ["requirements.txt"] }
